# yourtrainer-mcp

./: .gitignore  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  SNAPSHOT.yaml  pyproject.toml
.github/workflows/: ci.yml
deploy/: Caddyfile  README.md  healthcheck.sh  nginx-mcp.conf  yourtrainer-mcp.service
deploy/status/: canary.py  index.html
docs/: INTEGRATION.md  PHASES.md  PRIVACY.md
docs/__templates__/: README.md  SCHEMAS.md  adr.md  change.md  feature-overview.base  feature.md  issue.md  phase.md  plan.md  reference.md  release.md  requirement.md  risk.md  task.md  test.md  workflow.md
docs/changes/: CHG-20260529-01-Bootstrap-And-First-Capability-Tools.md  CHG-20260529-02-Workout-Authoring-Cluster.md  CHG-20260529-03-FIT-Binary-Codec.md  CHG-20260529-04-Ride-Analytics-And-Training-Load.md  CHG-20260529-05-Knowledge-Registry.md  CHG-20260529-06-Rider-Workflows.md  CHG-20260529-07-Library-Health-Conformance.md  CHG-20260529-08-Hardening-And-Ops-Scaffolding.md  (+11 more)
examples/: client_demo.py
scripts/: benchmark.py  build_docs.py
tests/: conftest.py  test_activity.py  test_activity_input.py  test_analysis.py  test_anonymize.py  test_attribution.py  test_batch.py  test_conformance.py  test_content.py  test_detect.py  test_docs_site.py  test_fit.py  test_fit_real_files.py  test_fit_workout_corpus.py  test_golden.py  test_health.py  test_library.py  test_performance.py  test_power.py  test_properties.py  test_reference_corpus.py  test_registry.py  test_route.py  test_server.py  test_statelessness.py  test_training_load.py  test_workflows.py  test_workout.py
(+153 files in other folders)
