[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yourtrainer-mcp"
version = "0.1.0"
description = "Self-hosted MCP server exposing cycling-format knowledge + capability tools (FIT/NP/IF/TSS, workout build/decompose/scale, validators)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Edwin Dankert and the Your Trainer team" }]
keywords = ["mcp", "cycling", "fit", "zwo", "training-load", "tss", "normalized-power"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "fastmcp>=2.0",
]

[project.optional-dependencies]
# FIT binary support is optional; TCX/GPX parse with the stdlib alone.
fit = ["fitparse>=1.2"]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.8",
    "hypothesis>=6.0",
]

[project.scripts]
yourtrainer-mcp = "yourtrainer_mcp.server:main"

[project.urls]
Homepage = "https://www.your-applications.com/your-trainer/"
Repository = "https://github.com/edankert/yourtrainer-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/yourtrainer_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
